Positivo: MFA implementado correctamente Negativo: Falta Recuperacion de contraseña

--- a/ProyectAudi/Views/Credenciales/Index.cshtml
+++ b/ProyectAudi/Views/Credenciales/Index.cshtml
@@ -28,7 +28,7 @@
             <button type="submit">Ingresar</button>
 
             <div class="mt-3 text-center">
-                <a asp-controller="Credenciales" asp-action="RecuperarContrasena" class="text-decoration-none text-primary">
+                <a asp-controller="Recuperacion" asp-action="Token" class="text-decoration-none text-primary">
                     ¿Olvidaste tu contraseña?
                 </a>
             </div>
