--- a/ProyectAudi/wwwroot/css/site.css
+++ b/ProyectAudi/wwwroot/css/site.css
@@ -45,7 +45,7 @@ body {
     .login-image img,
     .mfa-image img,
     .home-illustration img {
-        max-width: 100%;
+        max-width: 180px;
         height: auto;
         border-radius: 8px;
     }
