--- a/ProyectAudi/Views/Credenciales/Index.cshtml
+++ b/ProyectAudi/Views/Credenciales/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@model ProyectAudi.Modelspartial.CredencialesViewModel
+@{
+    ViewData["OcultarHeader"] = true;
+}
+
 
 <div class="login-card">
     <div class="login-image">
@@ -8,30 +12,48 @@
     <div class="login-form">
         <h2>Bienvenido de nuevo</h2>
 
-        @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+        @if (TempData["BloqueoRecuperacion"] != null)
         {
-            <div class="text-danger">@error.ErrorMessage</div>
+            <div class="alert alert-danger">
+                @TempData["BloqueoRecuperacion"]
+            </div>
         }
 
-        <form asp-action="Index" method="post">
+        @if (TempData["Mensaje"] != null)
+        {
+            <div class="alert alert-success">
+                @TempData["Mensaje"]
+            </div>
+        }
+
+        <form asp-action="Index" method="post" autocomplete="off">
             <div class="form-group">
-                <label>Usuario</label>
-                <input asp-for="Usuario" type="text" autocomplete="username" aria-label="Usuario" />
+                <label asp-for="Usuario">Usuario</label>
+                <input asp-for="Usuario" class="form-control" placeholder="Ingresa tu usuario" />
                 <span asp-validation-for="Usuario" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label>Contraseña</label>
-                <input asp-for="Contrasena" type="password" autocomplete="current-password" aria-label="Contraseña" />
+                <label asp-for="Contrasena">Contraseña</label>
+                <input asp-for="Contrasena" type="password" class="form-control" placeholder="Ingresa tu contraseña" />
+                <span asp-validation-for="Contrasena" class="text-danger"></span>
             </div>
-
             <button type="submit">Ingresar</button>
 
             <div class="mt-3 text-center">
-                <a asp-controller="Recuperacion" asp-action="Token" class="text-decoration-none text-primary">
-                    ¿Olvidaste tu contraseña?
-                </a>
+                @if (TempData["BloqueoRecuperacion"] == null)
+                {
+                    <a asp-controller="Recuperacion" asp-action="SolicitarToken" class="text-decoration-none text-primary">
+                        ¿Olvidaste tu contraseña?
+                    </a>
+                }
             </div>
         </form>
     </div>
 </div>
+@section Scripts {
+    @{
+        <script src="wwwroot/js/limpiarFormulario.js"></script>
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
