Envio de correo electronico personalizado y funcional

--- a/ProyectAudi/Views/Credenciales/Index.cshtml
+++ b/ProyectAudi/Views/Credenciales/Index.cshtml
@@ -43,7 +43,7 @@
             <div class="mt-3 text-center">
                 @if (TempData["BloqueoRecuperacion"] == null)
                 {
-                    <a asp-controller="Recuperacion" asp-action="SolicitarToken" class="text-decoration-none text-primary">
+                    <a asp-controller="Recuperacion" asp-action="SolicitarToken">
                         ¿Olvidaste tu contraseña?
                     </a>
                 }
