--- a/ProyectAudi/Views/Recuperacion/IngresarToken.cshtml
+++ b/ProyectAudi/Views/Recuperacion/IngresarToken.cshtml
@@ -32,7 +32,8 @@
                     <span asp-validation-for="ConfirmarContrasena" class="text-danger"></span>
                 </div>
 
-                <button type="submit" class="btn btn-success">Cambiar contraseña</button>
+                <button type="submit" class="btn btn-primary">Cambiar contraseña</button>
+
             </form>
 
 
