--- a/ProyectAudi/Views/Usuarios/Details.cshtml
+++ b/ProyectAudi/Views/Usuarios/Details.cshtml
@@ -126,12 +126,6 @@
             @Html.DisplayFor(model => model.ESTADO_TINY)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ROL_ID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ROL_ID)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CREADO_POR)
         </dt>
         <dd class = "col-sm-10">
@@ -172,6 +166,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FECHA_ELIMINACION)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ROL)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ROL.ROL_ID)
         </dd>
     </dl>
 </div>
