--- a/ProyectAudi/Views/Recuperacion/IngresarToken.cshtml
+++ b/ProyectAudi/Views/Recuperacion/IngresarToken.cshtml
@@ -1,7 +1,12 @@
 ﻿@model ProyectAudi.Modelspartial.IngresarTokenViewModel
 @{
     ViewData["Title"] = "Validar token";
-    ViewData["OcultarHeader"] = true;
+    Layout = null;
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/home.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 }
 
 <div class="main-wrapper">
